--- a/Public/CSS/AdminM.css
+++ b/Public/CSS/AdminM.css
@@ -1,14 +1,14 @@
-
-/* Styles for the header, nav, main, and footer sections... */
-body{
+body {
     background-color: black;
 }
-h2{
+
+h2 {
     color: #eb9e10;
     text-decoration: underline;
     text-align: center;
 }
-header h1{
+
+header h1 {
     text-align: center;
     text-decoration: underline black;
     background-color: #eb9e10;
@@ -33,14 +33,23 @@ th {
     background-color: #eb9e10;
     color: black;
 }
-li a{
+
+li a {
     text-decoration: none;
     color: #eb9e10;
     margin-left: 10px;
     margin-right: 10px;
 }
-ul{
+
+ul {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 600px) {
+    table {
+        font-size: 12px;
+    }
 }
