--- a/Public/CSS/err.css
+++ b/Public/CSS/err.css
@@ -1,19 +1,15 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Spartan", sans-serif;
-}     
 body {
-        background-color: dimgrey;
-      }
-      h1 {
-        color: #c58308;
-      }
-    
-      @media only screen and (max-width: 600px) {    
-        body {
-          margin: 0;
-          padding: 20px;
-        }
-      }
+  background-color: dimgrey;
+}
+h1 {
+  color: #c58308;
+}
+
+/* Responsive Styles */
+@media only screen and (max-width: 600px) {
+  /* Adjust margin and padding for smaller screens */
+  body {
+    margin: 0;
+    padding: 20px;
+  }
+}
