--- a/Public/CSS/Item.css
+++ b/Public/CSS/Item.css
@@ -1,56 +1,85 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Spartan", sans-serif;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-h1 {
-    font-size: 50px;
-    line-height: 64px;
-    color: #222;
-}
-
-h2 {
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
-}
-
-h4 {
-    font-size: 20px;
-    color: #222;
-}
-
-h6 {
-    font-weight: 700;
-    font-size: 12px;
-}
-
-p {
-    font-size: 16px;
-    color: #465b52;
-    margin: 15px 0 20px 0;
-}
-
-.section-p1 {
-    padding: 40px 80px;
-}
-
 body {
     width: 100%;
-    background-color: #00000000
+    background-color: #ffffff;
 }
+
 #navbar li a.shop {
     color: #eb9e10;
 }
 
+.small-img-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.small-img-col {
+    flex-basis: 24%;
+    cursor: pointer;
+}
+
+.sproduct select {
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 5px;
+}
+
+.sproduct input {
+    width: 40px;
+    height: 35px;
+    padding-left: 10px;
+    font-size: 15px;
+    margin-right: 10px;
+}
+
+.sproduct input:focus {
+    outline: none;
+}
+
+.tt {
+    position: absolute;
+    left: 750px;
+    margin-top: 45px;
+}
+
+.buy-button {
+    background-color: #eb9e10;
+    opacity: 1;
+    transition: 0.3s all;
+}
+
+
+.h_container {
+    background-color: #cac7c7;
+    border-radius: 20px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, .1);
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    line-height: 45px;
+    margin-top: 10px;
+    margin-right: 5px;
+
+}
+
+#heart2 {
+    font-size: 25px;
+}
+
+#heart2:hover {
+    color: red;
+}
+
+h4.q {
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
 #product1 {
     text-align: center;
+    margin-left: 100px;
+    margin-top: 30px;
 }
 
 #product1 .pro {
@@ -58,17 +87,21 @@ body {
     min-width: 250px;
     padding: 10px 12px;
     border: 1px solid #eb9e10;
-    border-radius: 25px;
+    border-radius: 10px;
     cursor: pointer;
     box-shadow: 5px 5px 10px #eb9e10;
     margin: 15px 0;
+    margin-bottom: 35px;
     transition: 0.2s ease;
     position: relative;
     background-color: #000;
+    
 }
 
 #product1 .pro:hover {
     box-shadow: 20px 20px 30px #eb9e10;
+    width: 25%;
+    min-width: 300px;
 }
 
 #product1 .pro img {
@@ -83,23 +116,23 @@ body {
 
 #product1 .pro .des span {
     color: #635d5d;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 #product1 .pro .des h5 {
     padding-top: 7px;
     color: #ffffff;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 #product1 .pro .des i {
-    font-size: 12px;
+    font-size: 10px;
     color: #eb9e10;
 }
 
 #product1 .pro .des h4 {
     padding-top: 7px;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 700;
     color: #fcfcfc;
 }
@@ -123,20 +156,9 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     padding-top: 20px;
+    margin-right: 110px;
+    margin-left: 50px;
 }
-
-#num button {
+.r{
     margin-top: 30px;
-    margin-bottom: 30px;
-    padding: 10px;
-    border: #000, 10px;
-    border-radius: 20px;
-    background-color: #eb9e10;
-    color: #000;
-}
-#num button:hover{
-    background-color: #c58308;
-}
-#num a{
-    text-decoration: none;
 }
