--- a/Public/CSS/ProductsPage.css
+++ b/Public/CSS/ProductsPage.css
@@ -1,142 +1,174 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Spartan", sans-serif;
-}
 
-html {
-    scroll-behavior: smooth;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Spartan", sans-serif;
+        }
 
-h1 {
-    font-size: 50px;
-    line-height: 64px;
-    color: #222;
-}
+        html {
+            scroll-behavior: smooth;
+        }
 
-h2 {
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
-}
+        h1 {
+            font-size: 50px;
+            line-height: 64px;
+            color: #222;
+        }
 
-h4 {
-    font-size: 20px;
-    color: #222;
-}
+        h2 {
+            font-size: 46px;
+            line-height: 54px;
+            color: #222;
+        }
 
-h6 {
-    font-weight: 700;
-    font-size: 12px;
-}
+        h4 {
+            font-size: 20px;
+            color: #222;
+        }
 
-p {
-    font-size: 16px;
-    color: #465b52;
-    margin: 15px 0 20px 0;
-}
+        h6 {
+            font-weight: 700;
+            font-size: 12px;
+        }
 
-.section-p1 {
-    padding: 40px 80px;
-}
+        p {
+            font-size: 16px;
+            color: #465b52;
+            margin: 15px 0 20px 0;
+        }
 
-body {
-    width: 100%;
-    background-color: #00000000
-}
-#navbar li a.shop {
-    color: #eb9e10;
-}
+        .section-p1 {
+            padding: 40px 80px;
+        }
 
-#product1 {
-    text-align: center;
-}
+        body {
+            width: 100%;
+            background-color: #00000000
+        }
 
-#product1 .pro {
-    width: 23%;
-    min-width: 250px;
-    padding: 10px 12px;
-    border: 1px solid #eb9e10;
-    border-radius: 25px;
-    cursor: pointer;
-    box-shadow: 5px 5px 10px #eb9e10;
-    margin: 15px 0;
-    transition: 0.2s ease;
-    position: relative;
-    background-color: #000;
-}
+        #navbar li a.shop {
+            color: #eb9e10;
+        }
 
-#product1 .pro:hover {
-    box-shadow: 20px 20px 30px #eb9e10;
-}
+        #product1 {
+            text-align: center;
+        }
 
-#product1 .pro img {
-    width: 100%;
-    border-radius: 20px;
-}
+        #product1 .pro {
+            width: 23%;
+            min-width: 250px;
+            padding: 10px 12px;
+            border: 1px solid #eb9e10;
+            border-radius: 25px;
+            cursor: pointer;
+            box-shadow: 5px 5px 10px #eb9e10;
+            margin: 15px 0;
+            transition: 0.2s ease;
+            position: relative;
+            background-color: #000;
+        }
 
-#product1 .pro .des {
-    text-align: start;
-    padding: 10px 0;
-}
+        #product1 .pro:hover {
+            box-shadow: 20px 20px 30px #eb9e10;
+        }
 
-#product1 .pro .des span {
-    color: #635d5d;
-    font-size: 12px;
-}
+        #product1 a {
+            text-decoration: none;
+        }
 
-#product1 .pro .des h5 {
-    padding-top: 7px;
-    color: #ffffff;
-    font-size: 14px;
-}
+        #product1 .pro img {
+            width: 100%;
+            border-radius: 20px;
+        }
 
-#product1 .pro .des i {
-    font-size: 12px;
-    color: #eb9e10;
-}
+        #product1 .pro .des {
+            text-align: start;
+            padding: 10px 0;
+        }
 
-#product1 .pro .des h4 {
-    padding-top: 7px;
-    font-size: 15px;
-    font-weight: 700;
-    color: #fcfcfc;
-}
+        #product1 .pro .des span {
+            color: #635d5d;
+            font-size: 12px;
+        }
 
-#product1 .pro .cart {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 50px;
-    font-weight: 500;
-    background-color: #000000;
-    color: #eb9e10;
-    border: 1px solid #eb9e10;
-    position: absolute;
-    bottom: 20px;
-    right: 10px;
-}
+        #product1 .pro .des h5 {
+            padding-top: 7px;
+            color: #ffffff;
+            font-size: 14px;
+        }
 
-#product1 .pro-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-top: 20px;
-}
+        #product1 .pro .des i {
+            font-size: 12px;
+            color: #eb9e10;
+        }
 
-#num button {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    padding: 10px;
-    border: #000, 10px;
-    border-radius: 20px;
-    background-color: #eb9e10;
-    color: #000;
-}
-#num button:hover{
-    background-color: #c58308;
-}
-#num a{
-    text-decoration: none;
-}
+        #product1 .pro .des h4 {
+            padding-top: 7px;
+            font-size: 15px;
+            font-weight: 700;
+            color: #fcfcfc;
+        }
+
+        #product1 .pro .cart {
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            border-radius: 50px;
+            font-weight: 500;
+            background-color: #000000;
+            color: #eb9e10;
+            border: 1px solid #eb9e10;
+            position: absolute;
+            bottom: 20px;
+            right: 10px;
+        }
+
+        #product1 .pro-container {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            padding-top: 20px;
+        }
+
+        #num button {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            padding: 10px;
+            border: #000, 10px;
+            border-radius: 20px;
+            background-color: #eb9e10;
+            color: #000;
+        }
+
+        #num button:hover {
+            background-color: #c58308;
+        }
+
+        #num a {
+            text-decoration: none;
+        }
+
+        .pagination {
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* Add this line */
+        }
+
+        .pagination a {
+            margin: 0 5px;
+            padding: 5px 10px;
+            border: 1px solid #000;
+            border-radius: 5px;
+            color: #eb9e10;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .pagination a.active,
+        .pagination a:hover {
+            background-color: #000;
+            color: #fff;
+        }
