--- a/Views/Add_Product.ejs
+++ b/Views/Add_Product.ejs
@@ -10,27 +10,9 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+	<link rel="stylesheet" href="/CSS/Add_Product.css">
 	<style>
-		body{
-			background-color: #eb9e10;
-		}
-		.container{
-			background-color: black;
-			margin-top: 100px;
-			color: #eb9e10;
-			border-radius: 25px;
-			padding: 20px;
-		}
-		button.btn{
-			background-color: #eb9e10;
-			border-radius: 25px;
-			margin-bottom: 10px;
-			border: #fff;
-		}
-		button.btn:hover{
-			background-color: #242323;
-			color: #eb9e10;
-		}
+		
 	</style>
 </head>
 <body>
