--- a/Views/Admin_Products_List.ejs
+++ b/Views/Admin_Products_List.ejs
@@ -6,75 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <link rel="stylesheet" href="/CSS/Addmin_Product_list.css">
+
     <style>
-        body {
-            background-color: black;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 32px;
-            text-align: center;
-            color: #eb9e10;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th,
-        td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #eb9e10;
-        }
-
-        th {
-            background-color: #eb9e10;
-            font-weight: bold;
-        }
-
-        td {
-            background-color: #fff;
-        }
-
-        tr.r:hover {
-            color: #eb9e10;
-        }
-
-        button.btn {
-            background-color: #eb9e10;
-            border-radius: 25px;
-            margin-bottom: 10px;
-            border: #fff;
-        }
-
-        button.btn:hover {
-            background-color: #242323;
-            color: #eb9e10;
-        }
-
-        /* Responsive Styles */
-        @media screen and (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-
-            h1 {
-                font-size: 24px;
-            }
-
-            table {
-                font-size: 14px;
-            }
-        }
+       
     </style>
     </script>
 </head>
