--- a/Views/Edit_Users.ejs
+++ b/Views/Edit_Users.ejs
@@ -6,41 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .user-edit-sheet {
-            background-color: #eb9e10;
-            border: 1px solid #000000;
-            border-radius: 5px;
-            padding: 20px;text-align: center;
+    
+    <link rel="stylesheet" href="/CSS/Edite_Users.css">
 
-        }
-        
-        .user-edit-sheet h2 {
-            margin-top: 0;
-            text-align: center;
-            text-decoration: underline;
-        }
-
-        .form-group {
-            margin-bottom: 10px;
-        }
-
-        .form-group label {
-            display: inline-block;
-            width: 100px;
-            font-weight: bold;
-        }
-
-        .form-group input,
-        .form-group select {
-            display: inline-block;
-            width: 200px;
-        }
-
-        .form-group button {
-            margin-right: 10px;
-        }
-    </style>
     
 </head>
 
