--- a/Views/editproducts.ejs
+++ b/Views/editproducts.ejs
@@ -7,46 +7,14 @@
   <title>Products List</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link rel="stylesheet" href="/CSS/Editproducts.css">
+
   <title>Edit Product</title>
+
 </head>
-<style>
-  .user-edit-sheet {
-    background-color: #eb9e10;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    padding: 20px;
-    text-align: center;
+ 
 
-  }
-
-  .user-edit-sheet h2 {
-    margin-top: 0;
-    text-align: center;
-    text-decoration: underline;
-  }
-
-  .form-group {
-    margin-bottom: 10px;
-  }
-
-  .form-group label {
-    display: inline-block;
-    width: 100px;
-    font-weight: bold;
-  }
-
-  .form-group input,
-  .form-group select {
-    display: inline-block;
-    width: 200px;
-  }
-
-  .form-group button {
-    margin-right: 10px;
-  }
-</style>
-
-</script>
 
 <body>
   <%- include("./partials/nav.ejs") %>
