--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -18,84 +18,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="/CSS/Home.css">
+
     <style>
-        
-html {
-    scroll-behavior: smooth;
-}
-
-h1 {
-    font-size: 50px;
-    line-height: 64px;
-    color: #222;
-}
-
-h2 {
-    font-size: 46px;
-    line-height: 54px;
-    color: #222;
-}
-
-h4 {
-    font-size: 20px;
-    color: #222;
-}
-
-h6 {
-    font-weight: 700;
-    font-size: 12px;
-}
-
-p {
-    font-size: 16px;
-    color: #465b52;
-    margin: 15px 0 20px 0;
-}
-
-#navbar li a.home {
-    color: #eb9e10;
-}
-
-.section-p1 {
-    padding: 40px 80px;
-}
-
-.section-m1 {
-    margin: 40px 0;
-}
-
-button.normal {
-    font-size: 14px;
-    font-weight: 600;
-    padding: 15px 30px;
-    color: #000;
-    background-color: #fff;
-    border-radius: 4px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-    transition: 0.2s;
-}
-
-button.white {
-    font-size: 13px;
-    font-weight: 600;
-    padding: 11px 18px;
-    color: #252424;
-    background-color: transparent;
-    cursor: pointer;
-    border: 1px solid #000;
-    outline: none;
-    transition: 0.2s;
-}
-
-body {
-    width: 100%;
-    background-color: #fafafa;
-}
-
-#hero {
-    background-image: url("Images/woman-1245817.jpg");
+        #hero {
+    background-image: url("/Images/woman-1245817.jpg");
     height: 90vh;
     width: 100%;
     background-size: cover;
@@ -106,16 +33,6 @@ body {
     align-items: flex-start;
     justify-content: center;
 }
-
-#hero h4 {
-    padding-bottom: 15px;
-
-}
-
-#hero h1 {
-    color: #ffffff;
-}
-
 #hero button {
     background-image: url("Images/woman-1245817.jpg");
     background-color: transparent;
@@ -127,130 +44,6 @@ body {
     font-weight: 700px;
     font-size: 15px;
 }
-
-#feature {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-#feature .fe-box {
-    width: 220px;
-    text-align: center;
-    padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
-    border: 1px solid #cce7d0;
-    border-radius: 4px;
-    margin: 15px 0;
-}
-
-#feature .fe-box:hover {
-    box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
-}
-
-#feature .fe-box img {
-    width: 60%;
-    margin-bottom: 10px;
-}
-
-#feature .fe-box h6 {
-    display: inline-block;
-    padding: 9px 8px 6px 8px;
-    line-height: 1;
-    border-radius: 4px;
-    color: #088178;
-    background-color: #eb9e10;
-}
-
-#feature .fe-box:nth-child(2) h6 {
-    background-color: #323233;
-}
-
-#feature .fe-box:nth-child(3) h6 {
-    background-color: #eb9e10;
-}
-
-#feature .fe-box:nth-child(4) h6 {
-    background-color: #92143e;
-}
-
-#product1 {
-    text-align: center;
-}
-
-#product1 .pro {
-    width: 23%;
-    min-width: 250px;
-    padding: 10px 12px;
-    border: 1px solid #eb9e10;
-    border-radius: 25px;
-    cursor: pointer;
-    box-shadow: 5px 5px 10px #eb9e10;
-    margin: 15px 0;
-    transition: 0.2s ease;
-    position: relative;
-    background-color: #000;
-}
-
-#product1 .pro:hover {
-    box-shadow: 20px 20px 30px #eb9e10;
-}
-
-#product1 .pro img {
-    width: 100%;
-    border-radius: 20px;
-}
-
-#product1 .pro .des {
-    text-align: start;
-    padding: 10px 0;
-}
-
-#product1 .pro .des span {
-    color: #635d5d;
-    font-size: 12px;
-}
-
-#product1 .pro .des h5 {
-    padding-top: 7px;
-    color: #ffffff;
-    font-size: 14px;
-}
-
-#product1 .pro .des i {
-    font-size: 12px;
-    color: #eb9e10;
-}
-
-#product1 .pro .des h4 {
-    padding-top: 7px;
-    font-size: 15px;
-    font-weight: 700;
-    color: #fcfcfc;
-}
-
-#product1 .pro .cart {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 50px;
-    font-weight: 500;
-    background-color: #000000;
-    color: #eb9e10;
-    border: 1px solid #eb9e10;
-    position: absolute;
-    bottom: 20px;
-    right: 10px;
-}
-
-#product1 .pro-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-top: 20px;
-}
-
 #banner {
     display: flex;
     flex-direction: column;
@@ -263,26 +56,6 @@ body {
     height: 40vh;
     background-position: center;
 }
-
-#banner h4 {
-    color: #e8f6ea;
-    font-size: 18px;
-}
-
-#banner h2 {
-    color: #E3E6f3;
-    font-size: 30px;
-    ;
-}
-
-#banner h2 span {
-    color: #eb9e10;
-}
-
-#banner button:hover {
-    background-color: #eb9e10;
-}
-
 #sm-banner .banner-box {
     display: flex;
     flex-direction: column;
@@ -310,44 +83,6 @@ body {
     background-size: cover;
     background-position: center;
     padding: 30px;
-}
-
-#sm-banner {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-}
-
-#sm-banner h4 {
-    color: #4e4e4e;
-    font-size: 20px;
-    font-weight: 300;
-}
-
-#sm-banner h2 {
-    color: #000;
-    font-size: 28px;
-    font-weight: 800;
-
-}
-
-#sm-banner span {
-    color: #4e4e4e;
-    font-size: 14px;
-    font-weight: 500;
-    padding-bottom: 15px;
-}
-
-#sm-banner .banner-box:hover button {
-    background-color: #eb9e10;
-    border: 1px solid #cce7d0;
-}
-
-#sm-banner {
-    padding: 20px;
-    margin-top: 30px;
-    margin-bottom: 110px;
 }
 
     </style>
