--- a/Views/Item.ejs
+++ b/Views/Item.ejs
@@ -16,172 +16,8 @@
 
 <title>Document</title> 
 
-<style>
-    body {
-        width: 100%;
-        background-color: #ffffff;
-    }
+<link rel="stylesheet" href="/CSS/Item.css">
 
-    #navbar li a.shop {
-        color: #eb9e10;
-    }
-
-    .small-img-group {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 10px;
-    }
-
-    .small-img-col {
-        flex-basis: 24%;
-        cursor: pointer;
-    }
-
-    .sproduct select {
-        display: block;
-        padding: 5px 10px;
-        margin-bottom: 5px;
-    }
-
-    .sproduct input {
-        width: 40px;
-        height: 35px;
-        padding-left: 10px;
-        font-size: 15px;
-        margin-right: 10px;
-    }
-
-    .sproduct input:focus {
-        outline: none;
-    }
-
-    .tt {
-        position: absolute;
-        left: 750px;
-        margin-top: 45px;
-    }
-
-    .buy-button {
-        background-color: #eb9e10;
-        opacity: 1;
-        transition: 0.3s all;
-    }
-
-
-    .h_container {
-        background-color: #cac7c7;
-        border-radius: 20px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, .1);
-        display: inline-block;
-        width: 35px;
-        height: 35px;
-        text-align: center;
-        line-height: 45px;
-        margin-top: 10px;
-        margin-right: 5px;
-
-    }
-
-    #heart2 {
-        font-size: 25px;
-    }
-
-    #heart2:hover {
-        color: red;
-    }
-
-    h4.q {
-        margin-top: 100px;
-        margin-bottom: 50px;
-    }
-
-    #product1 {
-        text-align: center;
-        margin-left: 100px;
-        margin-top: 30px;
-    }
-
-    #product1 .pro {
-        width: 23%;
-        min-width: 250px;
-        padding: 10px 12px;
-        border: 1px solid #eb9e10;
-        border-radius: 10px;
-        cursor: pointer;
-        box-shadow: 5px 5px 10px #eb9e10;
-        margin: 15px 0;
-        margin-bottom: 35px;
-        transition: 0.2s ease;
-        position: relative;
-        background-color: #000;
-        
-    }
-
-    #product1 .pro:hover {
-        box-shadow: 20px 20px 30px #eb9e10;
-        width: 25%;
-        min-width: 300px;
-    }
-
-    #product1 .pro img {
-        width: 100%;
-        border-radius: 20px;
-    }
-
-    #product1 .pro .des {
-        text-align: start;
-        padding: 10px 0;
-    }
-
-    #product1 .pro .des span {
-        color: #635d5d;
-        font-size: 10px;
-    }
-
-    #product1 .pro .des h5 {
-        padding-top: 7px;
-        color: #ffffff;
-        font-size: 12px;
-    }
-
-    #product1 .pro .des i {
-        font-size: 10px;
-        color: #eb9e10;
-    }
-
-    #product1 .pro .des h4 {
-        padding-top: 7px;
-        font-size: 13px;
-        font-weight: 700;
-        color: #fcfcfc;
-    }
-
-    #product1 .pro .cart {
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        border-radius: 50px;
-        font-weight: 500;
-        background-color: #000000;
-        color: #eb9e10;
-        border: 1px solid #eb9e10;
-        position: absolute;
-        bottom: 20px;
-        right: 10px;
-    }
-
-    #product1 .pro-container {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        padding-top: 20px;
-        margin-right: 110px;
-        margin-left: 50px;
-    }
-    .r{
-        margin-top: 30px;
-    }
-</style>
 </head>
 <body>
     <%- include("./partials/Nav.ejs") %>
@@ -262,6 +98,10 @@
         </div>
         <% }) %>
     </div>
+    </section>
+    <br><br><br>
+    <section id="f">
+        <%- include("./partials/Footer.ejs") %>
     </section>
 </body>
 </html>
