--- a/Views/partials/Nav.ejs
+++ b/Views/partials/Nav.ejs
@@ -32,7 +32,7 @@ function googleTranslateElementInit() {
                 <% if(user.Type==="admin" ){ %>
                     <li> <a href='/admin/AddminM'>Admin</a></li>
                     <% } %>
-                        <li><a href="/user/Contact">Contact</a></li>
+                        <li><a href="/Contact">Contact</a></li>
                         <li><a href="/user/WishList"><i id="heart" class="far fa-heart"></i></a></li>
                         <% if(user.Type==="admin" ){ %>
                             <li><a href="/user/Cart"><i class="material-icons">shop</i></a></li>
