--- a/Views/ProductsPage.ejs
+++ b/Views/ProductsPage.ejs
@@ -16,181 +16,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Spartan", sans-serif;
-        }
+    <link rel="stylesheet" href="/CSS/ProductsPage.css">
 
-        html {
-            scroll-behavior: smooth;
-        }
-
-        h1 {
-            font-size: 50px;
-            line-height: 64px;
-            color: #222;
-        }
-
-        h2 {
-            font-size: 46px;
-            line-height: 54px;
-            color: #222;
-        }
-
-        h4 {
-            font-size: 20px;
-            color: #222;
-        }
-
-        h6 {
-            font-weight: 700;
-            font-size: 12px;
-        }
-
-        p {
-            font-size: 16px;
-            color: #465b52;
-            margin: 15px 0 20px 0;
-        }
-
-        .section-p1 {
-            padding: 40px 80px;
-        }
-
-        body {
-            width: 100%;
-            background-color: #00000000
-        }
-
-        #navbar li a.shop {
-            color: #eb9e10;
-        }
-
-        #product1 {
-            text-align: center;
-        }
-
-        #product1 .pro {
-            width: 23%;
-            min-width: 250px;
-            padding: 10px 12px;
-            border: 1px solid #eb9e10;
-            border-radius: 25px;
-            cursor: pointer;
-            box-shadow: 5px 5px 10px #eb9e10;
-            margin: 15px 0;
-            transition: 0.2s ease;
-            position: relative;
-            background-color: #000;
-        }
-
-        #product1 .pro:hover {
-            box-shadow: 20px 20px 30px #eb9e10;
-        }
-
-        #product1 a {
-            text-decoration: none;
-        }
-
-        #product1 .pro img {
-            width: 100%;
-            border-radius: 20px;
-        }
-
-        #product1 .pro .des {
-            text-align: start;
-            padding: 10px 0;
-        }
-
-        #product1 .pro .des span {
-            color: #635d5d;
-            font-size: 12px;
-        }
-
-        #product1 .pro .des h5 {
-            padding-top: 7px;
-            color: #ffffff;
-            font-size: 14px;
-        }
-
-        #product1 .pro .des i {
-            font-size: 12px;
-            color: #eb9e10;
-        }
-
-        #product1 .pro .des h4 {
-            padding-top: 7px;
-            font-size: 15px;
-            font-weight: 700;
-            color: #fcfcfc;
-        }
-
-        #product1 .pro .cart {
-            width: 40px;
-            height: 40px;
-            line-height: 40px;
-            border-radius: 50px;
-            font-weight: 500;
-            background-color: #000000;
-            color: #eb9e10;
-            border: 1px solid #eb9e10;
-            position: absolute;
-            bottom: 20px;
-            right: 10px;
-        }
-
-        #product1 .pro-container {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            padding-top: 20px;
-        }
-
-        #num button {
-            margin-top: 30px;
-            margin-bottom: 30px;
-            padding: 10px;
-            border: #000, 10px;
-            border-radius: 20px;
-            background-color: #eb9e10;
-            color: #000;
-        }
-
-        #num button:hover {
-            background-color: #c58308;
-        }
-
-        #num a {
-            text-decoration: none;
-        }
-
-        .pagination {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            /* Add this line */
-        }
-
-        .pagination a {
-            margin: 0 5px;
-            padding: 5px 10px;
-            border: 1px solid #000;
-            border-radius: 5px;
-            color: #eb9e10;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .pagination a.active,
-        .pagination a:hover {
-            background-color: #000;
-            color: #fff;
-        }
-    </style>
 
     <title>Products</title>
 </head>
@@ -242,66 +69,8 @@
                     </div>
                 </section>
                 <section id="f">
-            <footer class="site-footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-6">
-                            <h6>About</h6>
-                            <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative to
-                                help
-                                the upcoming programmers with the code. Scanfcode focuses on providing the most
-                                efficient
-                                code or snippets as the code wants to be simple. We will help programmers build up
-                                concepts
-                                in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap,
-                                JavaScript, PHP, Android, SQL and Algorithm.</p>
-                        </div>
-
-                        <div class="col-xs-6 col-md-3">
-                            <h6>Categories</h6>
-                            <ul class="footer-links">
-                                <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-                                <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-                                <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-                                <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-                                <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-                                <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-xs-6 col-md-3">
-                            <h6>Quick Links</h6>
-                            <ul class="footer-links">
-                                <li><a href="http://scanfcode.com/about/">About Us</a></li>
-                                <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-                                <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-                                <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-                                <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-sm-6 col-xs-12">
-                            <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
-                                <a href="#">Scanfcode</a>.
-                            </p>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <ul class="social-icons">
-                                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-        </section>
+                    <%- include("./partials/Footer.ejs") %>
+                </section>
 </body>
 
 </html>
