--- a/Views/WishList.ejs
+++ b/Views/WishList.ejs
@@ -9,176 +9,14 @@
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/42a3832eaa.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Spartan", sans-serif;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        #navbar li a.heart1 {
-            color: #eb9e10;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .container>h1 {
-            padding: 20px 0;
-        }
-
-        .cart {
-            display: flex;
-        }
-
-        .products {
-            flex: 0.75;
-        }
-
-        .product {
-            display: flex;
-            width: 100%;
-            height: 200px;
-            overflow: hidden;
-            color: blanchedalmond;
-            background-color: black;
-        
-            margin-bottom: 20px;
-        }
-
-        .product:hover {
-            border: none;
-            box-shadow: 10px 10px 10px #eb9e10;
-            transform: scale(1.01);
-        }
-
-        .product>img {
-            width: 300px;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .product>img:hover {
-            transform: scale(1.04);
-
-        }
-
-        .product-info {
-            padding: 20px;
-            width: 100%;
-            position: relative;
-        }
-
-        .product-name,
-        .product-price,
-        .product-offer {
-            margin-bottom: 20px;
-        }
-
-        .product-remove {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-            padding: 10px 25px;
-            background-color: #eb9e10;
-            color: rgb(0, 0, 0);
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        .product-add {
-            position: absolute;
-            bottom: 70px;
-            right: 20px;
-            padding: 10px 28px;
-            background-color: #eb9e10;
-            color: rgb(0, 0, 0);
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .product-remove:hover {
-            background-color: white;
-            color: rgb(0, 0, 0);
-            font-weight: 600;
-            border: 1px solid #eb9e10;
-        }
-        .product-add:hover {
-            background-color: white;
-            color: rgb(0, 0, 0);
-            font-weight: 600;
-            border: 1px solid #eb9e10;
-        }
-
-        .fa {
-            margin-right: 5px;
-        }
-
-        .cart-total p {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 30px;
-            font-size: 20px;
-        }
-
-        @media screen and (max-width: 700px) {
-            .remove {
-                display: none;
-            }
-
-            .product {
-                height: 150px;
-            }
-
-            .product>img {
-                height: 150px;
-                width: 200px;
-            }
-
-            .product-name,
-            .product-price,
-            .product-offer {
-
-                margin-bottom: 10px;
-            }
-        }
-
-        @media screen and (max-width: 900px) {
-            .cart {
-                flex-direction: column;
-            }
-
-            .cart-total {
-                margin-left: 0;
-                margin-bottom: 20px;
-            }
-        }
-
-        @media screen and (max-width: 1220px) {
-            .container {
-                max-width: 95%;
-            }
-        }
-    </style>
     <script src="https://kit.fontawesome.com/3929e16ef5.js" crossorigin="anonymous"></script>
     <script src="{% static 'network/functions.js' %}"></script>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="/CSS/WishList.css">
+
 </head>
 
 <body>
