--- a/Views/Contact.ejs
+++ b/Views/Contact.ejs
@@ -35,12 +35,10 @@
   <br>
   <section>
     <div class="container">
-      <form>
+      <form method="post" action="/user/Action_Add_Mess">
         <p style="color: white;">Leave Your Feadback</p>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
         <label for="email">Email</label>
         <input type="text" id="email" name="email" placeholder="Leave your email to contact you">
         <label for="subject">Subject</label>
