--- a/Views/AddminM.ejs
+++ b/Views/AddminM.ejs
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="/admin/Addmin_Users">-> Users.</a></li>
             <li><a href="/admin/Admin_Products_List">-> Products. </a></li>
-            <li><a href="#">-> Messages. </a></li>
+            <li><a href="/admin/Admin_Message">-> Messages. </a></li>
         </ul>
     </nav>
     <main>
