--- a/Views/Item.ejs
+++ b/Views/Item.ejs
@@ -30,7 +30,7 @@
             </div>
             <section class="tt">
                 <div class="col-lg-6 col-md-12 col-1h6">
-                    <h3 class="py-4">Men's Fashion T-Shirt</h3>
+                    <h3 class="py-4"><%= prod.ProductName%></h3>
                     <h2><%= prod.Price%> LE</h2>
 
                     <form action="/user/add_to_cart" method="post" id="add_to_cart">
