--- a/Views/Add_Product.ejs
+++ b/Views/Add_Product.ejs
@@ -22,34 +22,57 @@
 		<form id="edit-product-form" method="post" action="/admin/Action_Add_product" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="product-name">Product Name:</label>
-				<input type="text" class="form-control" id="product-name" name="pname" placeholder="Enter product name" required>
+				<input type="text" class="form-control" id="product-name" name="pname" placeholder="Enter product name" autocomplete="off" required>
 			</div>
 			<div class="form-group">
 				<label for="product-name">Product Price:</label>
-				<input type="text" class="form-control" id="product-price" name="pprice" placeholder="Enter product price" required>
+				<input type="number" class="form-control" id="product-price" name="pprice" placeholder="Enter product price" autocomplete="off" required min="0">
 			</div>
 			<div class="form-group">
 				<label for="product-name">Product Size:</label>
-				<input type="text" class="form-control" id="product-size" name="psize" placeholder="Enter product size" required>
+				<input type="text" class="form-control" id="product-size" name="psize" placeholder="Enter product size" autocomplete="off" required>
 			</div>
 			<div class="form-group">
 				<label for="product-name">Product Quantity:</label>
-				<input type="text" class="form-control" id="product-quantity" name="pquantity" placeholder="Enter product quantity" required>
+				<input type="number" class="form-control" id="product-quantity" name="pquantity" placeholder="Enter product quantity" autocomplete="off" required min="0">
 			</div>
 			<div class="form-group">
 				<label for="product-name">Product Description:</label>
-				<input type="text" class="form-control" id="product-desc" name="pdescription" placeholder="Enter product description" required>
+				<input type="text" class="form-control" id="product-desc" name="pdescription" placeholder="Enter product description" autocomplete="off" required>
 			</div>
 			<div>
-				<label for="product-name">Product SHort Description:</label>
-				<input type="text" class="form-control" id="product-sdesc" name="psdescription" placeholder="Enter short description" required>
+				<label for="product-name">Product Short Description:</label>
+				<input type="text" class="form-control" id="product-sdesc" name="psdescription" placeholder="Enter short description" autocomplete="off" required>
 			</div>
 			<div class="form-group">
-				<label for="product-name">Product image</label>
+				<label for="product-name">Product Image:</label>
 				<input type="file" class="form-control" id="product-img" name="img">
 			</div>
 			<center><button type="submit" class="btn btn-primary">Submit</button></center>
 		</form>
 	</div>
+	<script>
+		$(document).ready(function() {
+			$('#edit-product-form').on('submit', function(event) {
+				event.preventDefault(); // Prevent form submission
+	
+				// Clear previous error messages
+				$('.error-message').remove();
+	
+				// Perform custom validation
+				var productName = $('#product-name').val().trim();
+				if (productName === '') {
+					$('#product-name').after('<div class="error-message">Please enter the product name.</div>');
+					return;
+				}
+	
+				// Additional validation logic for other fields
+	
+				// If all validations pass, you can submit the form programmatically:
+				this.submit();
+			});
+		});
+	</script>
+	
 </body>
 </html>
